--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -4,7 +4,7 @@ imports:
 
 framework:
     #esi:             ~
-    #translator:      { fallback: %locale% }
+    translator:      { fallback: %locale% }
     secret:          %secret%
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
@@ -56,4 +56,20 @@ swiftmailer:
     host:      %mailer_host%
     username:  %mailer_user%
     password:  %mailer_password%
-    spool:     { type: memory }
+    encryption: ssl
+#    spool:     # { type: memory }
+#        type: file
+#        path: "%kernel.root_dir%/spool"
+
+fos_user:
+    db_driver: orm
+    firewall_name: main
+    user_class: Bangnation\UserBundle\Entity\User
+
+    registration:
+        confirmation:
+            enabled: true
+            
+    from_email:
+        address:        no-reply@bangnation.net
+        sender_name:    Bangnation
