Added and enabled twitter bootstrap Created test page and added links to existing features Added cssembed Added yuicompressor Created base layout

--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -13,3 +13,8 @@ parameters:
 
     locale:            en
     secret:            ThisTokenIsNotSoSecretChangeIt
+
+    node: /usr/bin/node
+    node_paths: [/usr/lib/node_modules]
+#    node: /usr/local/bin/node
+#    node_paths: [/usr/local/lib/node_modules]
