--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -26,14 +26,26 @@ twig:
 assetic:
     debug:          %kernel.debug%
     use_controller: false
-    bundles:        [ ]
+    bundles:        [ MopaBootstrapBundle ]
     #java: /usr/bin/java
     filters:
-        cssrewrite: ~
-        #closure:
-        #    jar: %kernel.root_dir%/Resources/java/compiler.jar
-        #yui_css:
-        #    jar: %kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar
+        cssrewrite:
+            apply_to: "\.css$"
+        cssembed:
+            jar: %kernel.root_dir%/Resources/java/cssembed-0.4.5.jar
+#        closure:
+#            jar: %kernel.root_dir%/Resources/java/compiler.jar
+#            apply_to: "\.js$"
+        yui_css:
+            jar: %kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar
+            apply_to: "\.css$"
+        yui_js:
+            jar: %kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar
+            apply_to: "\.js$"
+        less:
+            node: %node%
+            node_paths: %node_paths%
+            apply_to: "\.less$"
 
 # Doctrine Configuration
 doctrine:
@@ -73,3 +85,9 @@ fos_user:
     from_email:
         address:        no-reply@bangnation.net
         sender_name:    Bangnation
+        
+mopa_bootstrap:
+    form:
+        show_legend: true
+        show_child_legend: true
+        error_type: inline # or block
