--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -28,6 +28,7 @@ security:
             anonymous: ~
 
     access_control:
+        - { path: ^/welcome, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
