--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -28,10 +28,15 @@ security:
             anonymous: ~
 
     access_control:
+        - { path: ^/about, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/contact, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/privacy, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/terms, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/welcome, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/, role: ROLE_ADMIN }
         - { path: ^/, roles: [IS_AUTHENTICATED_FULLY, IS_AUTHENTICATED_REMEMBERED] }
+
 
