--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -22,6 +22,8 @@ security:
         main:
             pattern: ^/
             form_login:
+                check_path: /login_check
+                login_path: /login
                 provider: fos_userbundle
                 csrf_provider: form.csrf_provider
             logout: true
