--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -29,10 +29,21 @@ assetic:
     bundles:        [ MopaBootstrapBundle ]
     #java: /usr/bin/java
     filters:
+        sass:
+            bin: /usr/local/bin/sass        
+            apply_to: "\.scss$"
+        compass:
+            bin: /usr/local/bin/compass
+            apply_to: "\.scss$|\.sass$" 
+        less:
+            node: %node%
+            node_paths: %node_paths%
+            apply_to: "\.less$"
         cssrewrite:
             apply_to: "\.css$"
-        cssembed:
-            jar: %kernel.root_dir%/Resources/java/cssembed-0.4.5.jar
+#        cssembed:
+#            jar: %kernel.root_dir%/Resources/java/cssembed-0.4.5.jar
+#            apply_to: "\.css$|\.less$"
 #        closure:
 #            jar: %kernel.root_dir%/Resources/java/compiler.jar
 #            apply_to: "\.js$"
@@ -42,10 +53,6 @@ assetic:
         yui_js:
             jar: %kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar
             apply_to: "\.js$"
-        less:
-            node: %node%
-            node_paths: %node_paths%
-            apply_to: "\.less$"
 
 # Doctrine Configuration
 doctrine:
@@ -90,10 +97,25 @@ fos_user:
         
 mopa_bootstrap:
     form:
-        show_legend: true
-        show_child_legend: true
+        show_legend: false
+        show_child_legend: false
         error_type: inline # or block
         
+liip_imagine:
+    driver:               gd
+    web_root:             %kernel.root_dir%/../web
+    data_root:            %kernel.root_dir%/../web
+    cache_prefix:         /media/cache
+    cache:                web_path
+    data_loader:          filesystem
+    controller_action:    liip_imagine.controller:filterAction
+    formats:              []
+    filter_sets:
+        logo_medium:
+            quality: 100
+            filters: 
+                thumbnail: { size: [350, ~], mode: outbound, allow_upscale: true }          
+
 services:
     bangnation_user.registration.form.type:
         class: Bangnation\UserBundle\Form\Type\RegistrationFormType
