--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -18,3 +18,6 @@ parameters:
     node_paths: [/usr/lib/node_modules]
 #    node: /usr/local/bin/node
 #    node_paths: [/usr/local/lib/node_modules]
+
+    assetic.filter.compass.images_dir: %kernel.root_dir%/../web/images
+    assetic.filter.compass.http_path:  /images
