--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -30,6 +30,7 @@ security:
             anonymous: ~
 
     access_control:
+        - { path: ^/media, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/about, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/contact, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/privacy, role: IS_AUTHENTICATED_ANONYMOUSLY }
