Custom facebook like chat
(Had to rewrite the crappy one that looked cool... Just isn't a good one out there)

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+BangnationChatBundle:
+    resource: "@BangnationChatBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 BangnationEventBundle:
     resource: "@BangnationEventBundle/Controller/"
     type:     annotation
