--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,6 +1,8 @@
 imports:
     - { resource: parameters.yml }
     - { resource: security.yml }
+    - { resource: "@BangnationUserBundle/Resources/config/services.yml" }
+
 
 framework:
     #esi:             ~
@@ -69,6 +71,11 @@ doctrine:
         auto_generate_proxy_classes: %kernel.debug%
         auto_mapping: true
 
+stof_doctrine_extensions: 
+    orm: 
+        default: 
+            sluggable: true
+            
 # Swiftmailer Configuration
 swiftmailer:
     transport: %mailer_transport%
