--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -71,9 +71,10 @@ doctrine:
         auto_generate_proxy_classes: %kernel.debug%
         auto_mapping: true
 
-stof_doctrine_extensions: 
-    orm: 
-        default: 
+stof_doctrine_extensions:
+    default_locale: en_US
+    orm:
+        default:
             sluggable: true
             
 # Swiftmailer Configuration
