--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+BangnationCommonBundle:
+    resource: "@BangnationCommonBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 BangnationChatBundle:
     resource: "@BangnationChatBundle/Controller/"
     type:     annotation
@@ -12,30 +17,6 @@ BangnationEventBundle:
 #_internal:
 #    resource: "@FrameworkBundle/Resources/config/routing/internal.xml"
 #    prefix:   /_internal
-_welcome:
-    resource: "@BangnationCommonBundle/Controller/WelcomeController.php"
-    type:     annotation
-    prefix:   /
-    
-about:
-    resource: "@BangnationCommonBundle/Controller/AboutController.php"
-    type:     annotation
-    prefix:   /
-    
-contact:
-    resource: "@BangnationCommonBundle/Controller/ContactController.php"
-    type:     annotation
-    prefix:   /
-    
-privacy:
-    resource: "@BangnationCommonBundle/Controller/PrivacyController.php"
-    type:     annotation
-    prefix:   /
-    
-terms:
-    resource: "@BangnationCommonBundle/Controller/TermsController.php"
-    type:     annotation
-    prefix:   /
 
 fos_user_security:
     resource: "@FOSUserBundle/Resources/config/routing/security.xml"
