Added voter to automatically highlight current menu item(s) based on url/route

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -199,3 +199,11 @@ services:
             # The alias is used to retrieve the navbar in templates
             - { name: mopa_bootstrap.navbar, alias: frontendNavbar }
             
+    # Matcher for showing selected menu item for knp_menu
+    bangnation.voter.request:
+        class: Bangnation\CommonBundle\Voter\RequestVoter
+        arguments:
+            - @service_container
+        tags:
+            - { name: knp_menu.voter }
+            
